# Lab03

./: CMakeLists.txt  main.cpp
include/: Figure.h  Pentagon.h  Rhombus.h  Trapeze.h
src/: FIgure.cpp  Pentagon.cpp  Rhombus.cpp  Trapeze.cpp
test/: tests.cpp
